--- a/index.html
+++ b/index.html
@@ -51,37 +51,103 @@
             </button>
         </div>
     </nav>
-
-    <div class="container-fluid overflow-hidden Caja-paginas">
+    <div class="container-fluid overflow-hidden Caja-paginas mt-5 mb-3">
         <div class="PaginasCrsl d-flex" id="PaginasCrsl">
-            <div class="pagina w-100 justify-content-center align-items-center d-flex flex-column gap-3 1">
-                <h1>1</h1>
+            <div class="pagina justify-content-center align-items-center d-flex flex-column gap-3 p-3 p1">
+                <h1>Inicio</h1>
             </div>
-            <div class="pagina w-100 justify-content-center align-items-center d-flex flex-column gap-3 2">
-                <h1>2</h1>
+            <div class="pagina justify-content-center align-items-center d-flex flex-column gap-3 p-3 p2">
+                <h1>Habilidades</h1>
             </div>
-            <div class="pagina w-100 justify-content-center align-items-center d-flex flex-column gap-3 3">
-                <h1>3</h1>
+            <div class="pagina justify-content-center align-items-start d-flex flex-column gap-3 p-3 p3">
+                <h1 class="align-self-start">Experiencia</h1>
+                <div class="row container-fluid gap-2">
+                    <div class="col p-2 m-1 d-flex flex-column gap-2 cajasExp">
+                        <h3>Web Freelance & Junior Dev</h3>
+                        <h4>2021 - 2022</h4>
+                        <p>Comencé mi camino creando soluciones personalizadas para pequeños negocios. Me enfoqué en el desarrollo de aterrizaje (landing pages) y sitios institucionales utilizando HTML, CSS y JavaScript, asegurando diseños responsivos y optimización SEO básica.</p>
+                    </div>
+                    <div class="col p-2 m-1 d-flex flex-column gap-2 cajasExp">
+                        <h3>Frontend Developer en "Almacenes Paris"</h3>
+                        <h4>2022 - 2023</h4>
+                        <p>Especializado en la creación de interfaces dinámicas y modernas. Trabajé con frameworks como React y Bootstrap para agilizar el despliegue de plataformas e-commerce, mejorando la velocidad de carga en un 30% y colaborando estrechamente con equipos de diseño UI/UX.</p>
+                    </div>
+                    <div class="col p-2 m-1 d-flex flex-column gap-2 cajasExp">
+                        <h3>Full Stack Developer en "Supermercados Jumbo"</h3>
+                        <h4>2023 - Presente</h4>
+                        <p>Actualmente lidero el desarrollo de aplicaciones web escalables. Me encargo tanto de la arquitectura del frontend como de la integración con bases de datos y APIs en el backend, utilizando Node.js y bases de datos NoSQL para gestionar sistemas de alta demanda.</p>
+                    </div>
+                </div>
             </div>
-            <div class="pagina w-100 justify-content-center align-items-center d-flex flex-column gap-3 4">
-                <h1>4</h1>
+            <div class="pagina justify-content-center align-items-center d-flex flex-column row gap-3 p-3 p4">
+                <div class="col-6 rounded-3 shadow-sm h-75 justify-content-center text-center d-flex flex-column gap-3" id="textoContacto">
+                    <h2>¿Quieres contactarme?</h2>
+                    <p>Enviame un mensaje directamente por esta web sobre cualquier duda ya sea sobre mis proyectos, colaboraciones o sugerencias<br>
+                    Recuerda que tus datos jamás seran compartido o usados en beneficio propio, adelante no tengas miedo!</p>
+                </div>
+                <div class="col-6 d-flex flex-column gap-4">
+                    <h2>Envia tu mensaje aqui</h2>
+                    <form class="d-flex flex-column gap-2 formulario" id="form">
+                        <div class="Campos">
+                            <label class="mb-2" for="Nombre">Nombre</label>
+                            <input class="form-control" type="text" name="Nombre" id="Nombre">
+                            <small>Mensaje de error</small>
+                        </div>
+
+                        <div class="Campos">
+                            <label class="mb-2"  for="Email">E-mail</label>
+                            <input class="form-control" type="email" name="Email" id="Email">
+                            <small>Mensaje de error</small>
+                        </div>
+
+                        <div class="Campos">
+                            <label class="mb-2" for="Mensaje">Mensaje</label>
+                            <textarea class="form-control" name="Mensaje" id="Mensaje" cols="60" rows="30" maxlength="500"></textarea>
+                            <small>Mensaje de error</small>
+                        </div>
+
+                        <button class="rounded-3 align-self-center" id="sendBtn" type="submit">Confirmar</button>  
+                    </form>
+                </div>
             </div>
-            <div class="pagina w-100 justify-content-center align-items-center d-flex flex-column gap-3 5">
-                <h1>5</h1>
+            <div class="pagina justify-content-center align-items-center d-flex flex-column gap-3 row p-3 p5">
+                    <div class="col-6 d-flex flex-column gap-4">
+                        <a class="container-lg p-2 rounded-2 cajaLinks" id="GitHub" href="https://github.com/JereRubilar" target="_blank">
+                        <img class="logoRS" src="./Assets/Icons/github.svg">   
+                        GitHub</a>
+                        <a class="container-lg p-2 rounded-2 cajaLinks" id="LinkedIn" href="https://www.linkedin.com/in/jeremias-rubilar-ovando-3a990514b/" target="_blank">
+                        <img class="logoRS" src="./Assets/Icons/linkedin.svg">
+                            LinkedIn</a>
+                        <a class="container-lg p-2 rounded-2 cajaLinks" id="Discord" href="#" target="_blank">
+                        <img class="logoRS"  src="./Assets/Icons/discord.svg">    
+                        Discord</a>
+                        <a class="container-lg p-2 rounded-2 cajaLinks" id="Bluesky" href="#" target="_blank">
+                        <img class="logoRS"  src="./Assets/Icons/bluesky.svg">
+                        BlueSky</a>
+                        <a class="container-lg p-2 rounded-2 cajaLinks" id="YouTube" href="#" target="_blank">
+                        <img class="logoRS"  src="./Assets/Icons/youtube.svg">
+                        YouTube</a>
+                        <a class="container-lg p-2 rounded-2 cajaLinks" id="G-mail" href="mailto:jererubilar17@gmail.com">
+                        <img class="logoRS"  src="./Assets/Icons/gmail.svg">
+                        Mail</a>
+                    </div>
+                    <div class="col-6 rounded-3 shadow-sm h-75 justify-content-center text-center d-flex flex-column gap-3" id="textoLinks">
+                        <h2>¿Buscas más de mis proyectos o metodos de contacto?</h2>
+                        <p> Aqui tienes diferentes enlaces a diferentes plataformas es donde podras revisar más trabajos en donde he colaborado
+                            o redes sociales donde puedes contactarme de manera más directa.<br>
+                            No dudes en visitarlos todos!
+                        </p>
+
+                </div>
             </div>
         </div>   
-    </div>
-    
-    <footer class="container-fluid footer">
-        xxx
-        <div class="row">
-
-        </div>
+    </div>  
+    <footer class="container-fluid pb-2 pt-3 text-end shadow-sm rounded-top-4">
+        <span class="me-2">Esta pagina fue creada por Jeremías Rubilar bajo licencia GNU 3.0</span>
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="./Assets/Scripts/StyleJs.js"></script>
+    <script src="./Assets/Scripts/Formulario.js"></script>
 </body>
 </html>
