--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="pagina justify-content-center align-items-center d-flex flex-column gap-3 p-3 p2">
-                <div class="row d-flex">
+                <div class="row gx-0 d-flex">
                     <div class="d-flex flex-column container-fluid col-6 d-flex gap-4 flex-column">
                         <h3>Proyectos</h3>
                         <div class="rounded-3 shadow-sm p-2 cajaProyecto">
@@ -110,7 +110,7 @@
             </div>
             <div class="pagina justify-content-center align-items-start d-flex flex-column gap-3 p-3 p3">
                 <h1 class="align-self-start">Experiencia</h1>
-                <div class="row container-fluid gap-2">
+                <div class="row gx-0 container-fluid gap-2">
                     <div class="col p-2 m-1 d-flex flex-column gap-2 rounded-2 shadow-sm cajasExp">
                         <h3>Web Freelance & Junior Dev</h3>
                         <h4>2021 - 2022</h4>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pagina justify-content-center align-items-center d-flex flex-column row gap-3 p-3 p4">
+            <div class="pagina justify-content-center align-items-center d-flex flex-column row gx-0 gap-3 p-3 p4">
                 <div class="col-6 rounded-3 shadow-sm h-75 justify-content-center text-center d-flex flex-column gap-3" id="textoContacto">
                     <h2>¿Quieres contactarme?</h2>
                     <p>Envíame un mensaje directamente por esta web sobre cualquier duda ya sea sobre mis proyectos, colaboraciones o sugerencias<br>
@@ -159,7 +159,7 @@
                     </form>
                 </div>
             </div>
-            <div class="pagina justify-content-center align-items-center d-flex flex-column gap-3 row p-3 p5">
+            <div class="pagina justify-content-center align-items-center d-flex flex-column gap-3 row gx-0 p-3 p5">
                     <div class="col-6 d-flex flex-column gap-4">
                         <a class="container-lg p-2 rounded-2 cajaLinks" id="GitHub" href="https://github.com/JereRubilar" target="_blank">
                         <img class="logoRS" src="./Assets/Icons/github.svg">   
